Fix various crashes by not trying to set the parent before we've initialized the frame.  Bug 262054, r+sr=roc.